// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`insert tab dynamically 1`] = `
<div class="win-tabs win-tabs--line">
  <div class="win-tabs__wrap win-hairline--top-bottom">
    <div role="tablist" class="win-tabs__nav win-tabs__nav--line">
      <div role="tab" class="win-tab"><span class="win-tab__text win-tab__text--ellipsis">1</span></div>
      <div role="tab" aria-selected="true" class="win-tab win-tab--active"><span class="win-tab__text win-tab__text--ellipsis">2</span></div>
      <div role="tab" class="win-tab"><span class="win-tab__text win-tab__text--ellipsis">3</span></div>
      <div class="win-tabs__line" style="width: 0px; transform: translateX(0px) translateX(-50%);"></div>
    </div>
  </div>
  <div class="win-tabs__content">
    <div role="tabpanel" class="win-tab__pane" style="display: none;">
      <!---->
    </div>
    <div>
      <div role="tabpanel" class="win-tab__pane">2</div>
    </div>
    <div role="tabpanel" class="win-tab__pane" style="display: none;">3</div>
  </div>
</div>
`;

exports[`insert tab with child component 1`] = `
<div class="win-tabs win-tabs--line">
  <div class="win-tabs__wrap win-hairline--top-bottom">
    <div role="tablist" class="win-tabs__nav win-tabs__nav--line">
      <div role="tab" aria-selected="true" class="win-tab win-tab--active"><span class="win-tab__text win-tab__text--ellipsis">1</span></div>
      <div role="tab" class="win-tab"><span class="win-tab__text win-tab__text--ellipsis">2</span></div>
      <div role="tab" class="win-tab"><span class="win-tab__text win-tab__text--ellipsis">3</span></div>
      <div class="win-tabs__line"></div>
    </div>
  </div>
  <div class="win-tabs__content">
    <div role="tabpanel" class="win-tab__pane">1</div>
    <div role="tabpanel" class="win-tab__pane" style="display: none;">
      <!---->
    </div>
    <div role="tabpanel" class="win-tab__pane" style="display: none;">
      <!---->
    </div>
  </div>
</div>
`;
